<resources>
    <string name="app_name">Spoofify</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_home">Home</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_player">Player</string>
    <string name="nav_search">Search</string>
    <string name="nav_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">Song Name</string>
    <string name="start_time">00:00</string>
    <string name="end_time">05:00</string>
    <string name="album_art">Album Art</string>
    <string name="song_desc">Song Name</string>
    <string name="nav_alarm">Alarm</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
</resources>
