<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_playist"
        android:icon="@drawable/baseline_library_music_black_24dp"
        android:title="@string/nav_playlist" />
    <item
        android:id="@+id/nav_alarm"
        android:icon="@drawable/baseline_alarm_black_24dp"
        android:title="@string/nav_alarm" />
    <item
        android:id="@+id/nav_player"
        android:icon="@drawable/baseline_play_arrow_black_24dp"
        android:title="@string/nav_player" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/nav_account" />
</menu>